# gmbot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  content.py  deps.txt  k8s.gmbot.yaml  main.py  pyproject.toml  requirements.txt  tests.py  utils.py
internal/: __init__.py  bot.py  content.py  image.py  kbs.py  store.py  utils.py
migration/: env.py
migration/versions/: 45937c7dc524_add_notify_on_user_table.py  906b5041efa6_user_table.py  b433643d4dfa_add_city_on_user_table.py
store/: store.py
